# mame-curator

./: .ants_review_falsepos.jsonl  .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  audit_rule_quality.json  config.example.yaml  overrides.example.yaml  pyproject.toml  run.bat  run.sh  sessions.example.yaml
.ants/: project.json
.audit_cache/: trend.json
.claude/: bump.json  workflow.md
.cold-eyes/: partition.json
.cold-eyes-reports/: loop1-author-reviewer.md  loop2-independent-reviewer.md
.github/workflows/: ci.yml  release.yml
docs/: audit-allowlist.md  glossary.md  ideas.md  known-issues.md
docs/decisions/: 0001-record-architecture-decisions.md  0002-cloneof-from-listxml.md  0003-listxml-tiered-acquisition.md  0004-ini-refresh-trust-model.md  README.md
docs/journal/: DOC01.md  DS01.md  DS02.md  DS03.md  DS04.md  DS05.md  FP01.md  FP02.md  FP04.md  FP05.md  FP06.md  FP07.md  FP08.md  FP09.md  FP10.md  FP11.md  FP12.md  FP13.md  FP14.md  FP15.md  FP16.md  FP20.md  FP21.md  FP25.md  FP26.md  FP27.md  FP28.md  P00.md  P01.md  P02.md  P03.md  P04.md  P05.md  P06.md  P07.md  P08.md  P09.md  P10.md  P14.md  P15.md
docs/specs/: DS01.md  DS02.md  DS03.md  DS04.md  DS05.md  FP05.md  FP06.md  FP07.md  FP08.md  FP27.md  FP28.md  P04.md  P05.md  P06.md  P10.md  P14.md
docs/standards/: README.md  coding-standards.md  coding.md  commits.md  documentation.md  roadmap-format.md  testing.md
docs/superpowers/plans/: 2026-04-27-phase-0-scaffold.md  2026-04-27-phase-1-parser.md  2026-04-27-phase-2-filter.md  2026-05-07-cart-and-curated-library-plan.md
docs/superpowers/specs/: 2026-04-27-mame-curator-design.md  2026-04-27-roadmap.md  2026-05-07-cart-and-curated-library-design.md
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/e2e/: cart-flow.spec.ts  fp25-ux-walkthrough.spec.ts  library-flow.spec.ts
frontend/e2e/fixtures/: config.yaml
frontend/screenshots/: capture.spec.ts  playwright.config.ts
frontend/src/: App.tsx  index.css  strings.ts  strings_internal.ts
frontend/src/__tests__/: LibraryPage_error_boundary.test.ts  landmark_labels.test.tsx  loading_announce.test.ts  strings.test.ts  strings_loading.test.ts
frontend/src/api/: client.ts  schemas.ts  types.ts
frontend/src/components/: CmdKPalette.tsx  ConfirmationDialog.tsx
frontend/src/hooks/: useActivity.ts  useAlternatives.ts  useApi.ts  useCart.ts  useConfig.ts  useCopySession.ts  useDryRun.ts  useFacets.ts  useFs.ts  useGameGridFocus.ts  useGames.ts  useHelp.ts  useKeyboard.ts  useMediaSources.ts  useReviewState.ts  useSessions.ts  useSetupCheck.ts  useStats.ts  useValidateCart.ts  useWikipediaExtract.ts
frontend/src/lib/: apiErrorToast.ts  queryClient.ts  theme.ts
frontend/src/pages/: ActivityPage.tsx  HelpPage.tsx  LibraryPage.tsx  SessionsPage.tsx  SettingsPage.tsx  StatsPage.tsx  libraryPageHelpers.ts  useLibraryController.ts
frontend/src/test/: fixtures.ts  handlers.ts  renderWithClient.tsx  setup.ts
scripts/: dev.sh
src/mame_curator/: __init__.py  _atomic.py  cli.py  downloads.py  main.py
tests/: conftest.py  test_atomic.py  test_downloads.py  test_fp25_atomic_perms.py  test_smoke.py
tests/api/: conftest.py  test_error_quoting.py  test_fp09_fixes.py  test_fp21_fixes.py  test_fp25_world_lock.py  test_fp28_jobs_loop_thread.py  test_fp28_media_proxy_headers.py  test_fp28_validate_paths_retroarch.py  test_persist.py  test_review_state_parity.py  test_routes_activity.py  test_routes_config.py  test_routes_copy.py  test_routes_curate.py  test_routes_fs.py  test_routes_games.py  test_routes_help.py  test_routes_media.py  test_routes_media_sources.py  test_routes_stubs.py  test_sse.py  test_state.py  test_state_routes.py  test_static_mount.py  test_world_state_bytes_cache.py
tests/cli/: test_cli_setup.py  test_fp28_refresh_inis_imports.py  test_fp28_serve_signal.py  test_version.py
tests/copy/: _runner_helpers.py  conftest.py  test_activity.py  test_bios.py  test_bios_properties.py  test_cli_copy.py  test_controller.py  test_errors.py  test_executor.py  test_fp01_error_branches.py  test_fp01_fixes.py  test_fp02_fixes.py  test_fp25_activity_concurrent.py  test_fp25_activity_durability.py  test_fp25_recyclebin.py  test_fp28_recyclebin_lock.py  test_playlist.py  test_preflight.py  test_recyclebin.py  test_runner.py  test_runner_lifecycle.py
tests/docs/: test_arch_diagrams.py  test_changelog_versioning_paragraph.py  test_dep_pin_coupling.py  test_design_spec_consistency.py  test_ds05_file_size_caps.py  test_ds05_test_count_stable.py  test_no_pre_release_pins.py  test_version_lockstep.py
tests/filter/: conftest.py  test_cli_filter.py  test_config.py  test_drops.py  test_fp27_config_error_removed.py  test_fp28_apply_session_error.py  test_fp28_region_re.py  test_fp28_runner_logger.py  test_heuristics.py  test_io.py  test_listxml_cloneof.py  test_overrides.py  test_picker.py  test_picker_revision_memoization.py  test_property.py  test_review_state.py  test_runner.py  test_sessions.py  test_snapshot.py  test_types.py
tests/fixtures/: arcadedb_pacman.json  wikipedia_pacman.json
tests/media/: conftest.py  test_cache.py  test_cache_text.py  test_escape.py  test_rate_limit.py  test_registry.py  test_resolve.py  test_sources.py  test_sources_arcadedb.py  test_sources_libretro.py  test_sources_mobygames.py  test_sources_progettosnaps.py  test_sources_wikipedia.py  test_urls.py  test_wikipedia.py
tests/parser/: conftest.py  test_cli_parse.py  test_dat.py  test_dat_basic.py  test_dat_security.py  test_dat_validation.py  test_errors.py  test_exports.py  test_fp28_description_mixed_content.py  test_fp28_license_re.py  test_ini.py  test_listxml.py  test_listxml_cloneof.py  test_manufacturer.py  test_models.py
tests/snapshots/: filter_smoke.json
tests/tools/: test_check_api_types_sync.py
tests/updates/: conftest.py  test_ini.py  test_snaps.py
tools/: check_api_types_sync.py
(+161 files in other folders)
